// Copyright 2017 Intel Corporation
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// -----------------------------------------------------------------------------

syntax = "proto3";

import "track_and_trace_state.proto";
import "schema_state.proto";

message TrackAndTracePayload {
  enum Action {
    UNSET_ACTION = 0;
    CREATE_RECORD = 1;
    FINALIZE_RECORD = 2;
    UPDATE_PROPERTIES = 3;
    CREATE_PROPOSAL = 4;
    ANSWER_PROPOSAL = 5;
    REVOKE_REPORTER = 6;
  }

  Action action = 1;

  // Approximately when transaction was submitted, as a Unix UTC
  // timestamp
  uint64 timestamp = 2;

  // The transaction handler will read from just one of these fields
  // according to the Action.
  CreateRecordAction create_record = 3;
  FinalizeRecordAction finalize_record = 4;
  UpdatePropertiesAction update_properties = 6;
  CreateProposalAction create_proposal = 7;
  AnswerProposalAction answer_proposal = 8;
  RevokeReporterAction revoke_reporter = 9;
}

message CreateRecordAction {
  // The natural key of the Record
  string record_id = 1;

  // The name of the Schema this Record belongs to
  string schema = 2;

  repeated PropertyValue properties = 3;
}


message FinalizeRecordAction {
  // The natural key of the Record
  string record_id = 1;
}

message UpdatePropertiesAction {
  // The natural key of the Record
  string record_id = 1;

  repeated PropertyValue properties = 2;
}


message CreateProposalAction {
  // The natural key of the Record
  string record_id = 1;

  // the public key of the Agent to whom the Proposal is sent
  // (must be different from the Agent creating the Proposal)
  string receiving_agent = 2;

  Proposal.Role role = 3;

  repeated string properties = 4;

  // The human-readable terms of transfer.
  string terms = 5;
}


message AnswerProposalAction {
  enum Response {
    ACCEPT = 0;
    REJECT = 1;
    CANCEL = 2;
  }

  // The natural key of the Record
  string record_id = 1;

  // The public key of the Agent to whom the proposal is sent
  string receiving_agent = 2;

  // The role being proposed (owner, custodian, or reporter)
  Proposal.Role role = 3;

  // The respose to the Proposal (accept, reject, or cancel)
  Response response = 4;
}


message RevokeReporterAction {
  // The natural key of the Record
  string record_id = 1;

  // The reporter's public key
  string reporter_id = 2;

  // The names of the Properties for which the reporter's
  // authorization is revoked
  repeated string properties = 3;
}
